# VTU

./: .dockerignore  .env.example  .gcloudignore  .gitignore  DEPLOYMENT.md  Dockerfile  PRE_DEPLOYMENT_CHECKLIST.md  README.md  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  test_webhook.py
.github/workflows/: ci.yml  deploy.yml  gcp-deploy.yml  migrations.yml
accounts/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_avatar_userprofile_full_name_and_more.py  0003_userprofile_first_name_userprofile_last_name_and_more.py  0004_alter_userprofile_avatar.py
accounts/templates/accounts/: dashboard.html  (+6 more)
config/: middleware.py  settings.py  urls.py
deployment/: GETTING-STARTED.md  README.md  gcp-deployment.md  local-testing.md  quick-start.md
docs/: DEPLOY.md  GCP_DEPLOYMENT_GUIDE.md
nginx/: nginx.conf
nginx/conf.d/: nova-vtu.conf
scripts/backup/: backup.sh  restore.sh
templates/: layout.html
templates/accounts/: dashboard.html  login.html  logout.html  password_reset.html  password_reset_confirm.html  profile.html  register.html  set_new_password.html  vtu_services.html
templates/emails/: purchase_confirmation.html  welcome_email.html
templates/errors/: 429.html
templates/includes/: form_messages.html
templates/transactions/: airtime_receipt.html  buy_airtime.html  buy_data.html  data_receipt.html  electricity_receipt.html  pay_electricity.html  transaction_history.html
templates/wallet/: demo_withdraw.html  fund_wallet.html  transaction_history.html  wallet_info.html
transactions/: admin.py  models.py  urls.py  views.py
transactions/migrations/: 0001_initial.py  0002_transaction_last_requery_at_and_more.py  0003_transaction_token.py  0004_appsettings.py
transactions/providers/: __init__.py  exceptions.py  vtpass.py
transactions/services/: __init__.py  airtime.py  data.py  electricity.py  fraud_check.py  verification.py  vtu_service.py
wallet/: models.py  signals.py  urls.py  views.py
wallet/migrations/: 0001_initial.py  0002_alter_transaction_options_transaction_description_and_more.py  0003_transaction_purpose_and_more.py  0004_transaction_updated_at_alter_transaction_purpose_and_more.py  0005_remove_transaction_purpose_transaction_reference_and_more.py  0006_alter_transaction_description_and_more.py  0007_remove_transaction_wallet_tran_wallet__b97fb2_idx_and_more.py
(+1 files in other folders)
