[project]
name = "vtu"
version = "0.1.0"
description = "Nova VTU - Virtual Top-Up Platform for Nigeria"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=6.0",
    "django-ratelimit>=4.1.0",
    "django-unfold>=0.73.1",
    "httpx>=0.28.0",
    "paystack>=1.5.0",
    "pillow>=12.0.0",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "whitenoise>=6.8.2",
    # Production dependencies
    "gunicorn>=23.0.0",
    "google-cloud-storage>=2.18.2",
    "django-storages[google]>=1.14.4",
]
